# Assistant

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  groq_client.py  main.py  middleware.py  schemas.py
backend/app/routes/: v1.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  sse.ts
frontend/src/config/: branding.ts  defaultSettings.ts
frontend/src/contexts/: SettingsContext.tsx  ToastContext.tsx
frontend/src/hooks/: useTwinMindSettings.ts
frontend/src/layouts/: ProtectedLayout.tsx  RootLayout.tsx
frontend/src/lib/: chatPayload.ts
frontend/src/pages/: SettingsPage.tsx  StudioPage.tsx
frontend/src/types/: session.ts  settings.ts
